# library-loader

./: .drone.yml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LibraryLoader.example.toml  MAX3232ECD-pcb-part-libraries.epw  README.md  TODO.md  build.rs  cli.yml  dist-install.sh  dist-uninstall.sh  docker-compose.yml  install.sh  macos-compile-x86_64.sh  macos-compile.sh  rustfmt.toml  version_check.sh
.cargo/: config
.circleci/: config.yml  windows.txt  windows_dist.sh
.circleci/deploy/: deploy.js  file.js  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: macos.yml
assets/: .gitignore  library-loader.glade  library-loader.rc  main.glade  resources.xml
assets/icons/: convert.sh
checks/: check-glade-yml.js  package-lock.json  package.json
epw/: ATMEGA328P-AU-pcb-part-libraries.epw
ll-cli/: Cargo.toml  cli.yml
ll-cli/src/: main.rs
ll-core/: Cargo.toml  build.rs
ll-core/src/: check_updates.rs  config.rs  consts.rs  cse.rs  cse_result.rs  epw.rs  error.rs  lib.rs  macros.rs  profile.rs  utils.rs  watcher.rs
ll-core/src/config/: mod.rs  profile.rs
ll-core/src/cse/: mod.rs  result.rs
ll-core/src/format/: mod.rs
ll-core/src/format/extractors/: designspark.rs  eagle.rs  kicad.rs  mod.rs
ll-core/src/format/processors/: easyeda.rs  kicad.rs  mod.rs
ll-core/src/logger/: console.rs  mod.rs
ll-core/src/updates/: client.rs  mod.rs
ll-core/src/watcher/: event.rs  mod.rs
ll-gui/: .gitignore  Cargo.toml  library-loader-gui.desktop
ll-gui/assets/: app.css  library-loader-fixed.glade  library-loader.glade  library-loader.glade.bak  library-loader.rc  resources.xml
ll-gui/assets/icons/: convert.sh
ll-gui/src/: consts.rs  macros.rs  main.rs  state.rs
ll-gui/src/tasks/: check_updates.rs  login.rs  mod.rs  watcher.rs
ll-gui/src/ui/: about.rs  alert.rs  event.rs  header_bar.rs  logger.rs  main.rs  mod.rs
ll-gui/src/ui/notebook/: account.rs  configuration.rs  login.rs  mod.rs  output.rs  updates.rs  watch.rs
ll-gui/src/utils/: mod.rs  resources.rs  safe_lock.rs  save_config.rs
ll-lib/: Cargo.toml
ll-lib/src/: config.rs  cse.rs  epw.rs  watcher.rs
ll-lib/src/format/extractors/: kicad.rs
src/: config.rs  consts.rs  cse.rs  cse_result.rs  epw.rs  error.rs  main.rs  profile.rs  watcher.rs
src/format/: eagle.rs  easyeda.rs  extractor_prelude.rs  kicad.rs  mod.rs
src/format/extractors/: mod.rs
src/ui/: about.rs  alert.rs  devtools.rs  mod.rs
src/ui/notebook/: mod.rs
tools/: generate_cert.ps1  get_dlls.sh  get_icons.sh  get_pfx.ps1  get_schemas.sh  get_theme.sh  run_checks.sh  settings.sh  sign.ps1  windows_dist.sh
