[package]
name = "library-loader"
version = "0.1.0"
authors = ["Edwin Svensson <git@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
base64 = "0.10.1"
clap = { version = "2.33.0", features = ["yaml"] }
serde = "1.0.101"
dirs = "2.0.2"
toml = "0.5.3"
rpassword = "4.0.1"

# File system watcher
crossbeam-channel = "0.3.8"
# notify = {version = "5.0.0-pre.1", features = ["serde"] }
notify = "4.0.14"
