[package]
name = "library-loader"
version = "0.1.2"
authors = ["Edwin Svensson <libloader@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.1"
base64 = "0.11.0"
clap = { version = "2.33.0", features = ["yaml"] }
serde = "1.0.102"
dirs = "2.0.2"
toml = "0.5.4"
rpassword = "4.0.1"
zip = "0.5.3"
crossbeam-channel = "0.3.9"
# notify = {version = "5.0.0-pre.1", features = ["serde"] }
notify = "5.0.0-pre.1"
