[package]
name = "library-loader-cli"
version = "0.2.0"
authors = ["Edwin Svensson <libloader@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library-loader-core = { path = "../ll-core", features = ["cli-auth", "cli-opts"] }
