[package]
name = "library-loader-cli"
version = "0.2.0"
authors = ["Edwin Svensson <libraryloader@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
library-loader-core = { path = "../ll-core", default-features = false, features = ["cli-auth", "cli-opts"] }
