[package]
name = "library-loader-cli"
version = "0.1.0"
description = "Download libraries from componentsearchengine.com"
authors = ["Edwin Svensson <libraryloader@olback.net>"]
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ll-core = { path = "../ll-core", package = "library-loader-core" }
# clap = { version = "3.0.0-beta.5", features = [ "yaml" ] }
clap = { version = "2.33", features = [ "yaml" ] }
