[package]
name = "ll-core"
version = "0.1.0"
authors = ["Edwin Svensson <libraryloader@olback.net>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
toml = "0.5"
notify = "=5.0.0-pre.13"
dirs = "4.0"
thiserror = "1"
reqwest = { version = "0.11", features = [ "blocking", "rustls-tls" ], default-features = false }
zip = "0.5"
base64 = "0.13"
shellexpand = "2"
