[package]
name = "library-loader-core"
version = "0.5.0"
authors = ["Edwin Svensson <libraryloader@olback.net>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = [ "derive" ] }
toml = "0.8"
notify = "6.0"
dirs = "5.0"
thiserror = "1"
reqwest = { version = "0.11", features = [ "blocking", "rustls-tls" ], default-features = false }
zip = "0.6"
data-encoding = "2.4"
shellexpand = "3"
