[package]
name = "library-loader-gui"
version = "0.2.0-dev"
authors = ["Edwin Svensson <libloader@olback.net>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8"
gio = "0.8"
glib = "0.9"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
library-loader-core = { path = "../ll-core", features = ["gui"], default-features = false }

[build-dependencies]
regex = "1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
