[package]
name = "library-loader-gui"
version = "0.5.0"
authors = ["Edwin Svensson <libraryloader@olback.net>"]
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.18", features = [ "v3_24_9" ] }
ll_core = { path = "../ll-core", package = "library-loader-core" }
shellexpand = "3"

[build-dependencies]
regex = "1"
toml = "0.8 "
serde = { version = "1.0", features = ["derive"] }
