[package]
name = "ll-lib"
version = "0.1.0"
authors = ["Edwin Svensson <git@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
base64 = "0.11"
serde = "1.0"
dirs = "2.0"
toml = "0.5"
rpassword = "4.0"
zip = "0.5"
crossbeam-channel = "0.3"
notify = "5.0.0-pre.1"
clap = { version = "2.33", features = ["yaml"] }
